--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -135,7 +135,7 @@
 通过 `GV$OB_SQL_AUDIT` 视图，我们可以方便的查询 SQL 执行的各种维度信息。如下示例为查询执行耗时超过 100ms 的 SQL 及其 `FLT_TRACE_ID`。
 
 ```shell
-/* 记录当前 Session 所有 SQL 的相关耗时等信息，采样频率为 50%。
+/* 开启全链路追踪 Session 级别 Trace，记录当前 Session 所有 SQL 的相关耗时等信息，采样频率为 50%。*/
 obclient> CALL DBMS_MONITOR.OB_SESSION_TRACE_ENABLE(null,1,0.5,'ALL');
 Query OK, 0 rows affected
 
