--- a/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
+++ b/zh-CN/700.reference/1000.performance-tuning-guide/500.sql-optimization/400.sql-optimization/300.monitor-sql-execution-performance/100.gv-ob-sql-audit.md
@@ -132,7 +132,9 @@
 | PARAMS_VALUE            | longtext            | CLOB      | 参数值      |
 | FLT_TRACE_ID    | varchar(1024) | varchar(1024)| 记录全链路诊断的 Trace ID。如果为空，则说明没有被全链路诊断监控。该字段是 UUID，有别于 Trace，其表示形式示例为:000600d6-a5de-038c-6c80-df07e4e79149|
 
-通过 `GV$OB_SQL_AUDIT` 视图，我们可以方便的查询 SQL 执行的各种维度信息。如下示例为查询执行耗时超过 100ms 的 SQL 及其 `FLT_TRACE_ID`。
+## 示例
+
+通过 `GV$OB_SQL_AUDIT` 视图可以方便的查询 SQL 执行的各种维度信息。如下示例为查询执行耗时超过 100ms 的 SQL 及其 `FLT_TRACE_ID`。
 
 ```shell
 /* 开启全链路追踪 Session 级别 Trace，记录当前 Session 所有 SQL 的相关耗时等信息，采样频率为 50%。*/
