--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450.json-table-functions-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/400.functions-of-mysql-mode/700.json-functions-of-mysql-mode/450.json-table-functions-of-mysql-mode.md
@@ -76,21 +76,56 @@ SELECT * FROM
   ) AS tt;
 ```
 
+示例的查询结果如下：
+
+```shell
++------+-------+-----------+-------+
+| id   | jpath | jsn_path  | jexst |
++------+-------+-----------+-------+
+|    1 | 33    | {"x": 33} |     0 |
+|    2 | 2     | 2         |     0 |
+|    3 | 33    | {"x": 33} |     1 |
+|    4 | 0     | 0         |     0 |
+|    5 | 66    | [1, 2]    |     0 |
++------+-------+-----------+-------+
+5 rows in set
+```
+
 ## 从表中获取数据
 
 如下示例为从表中获取 JSON 数据，将其展开称为结构化数据。
 
 ```shell
 DROP TABLE IF EXISTS t1;
+
 CREATE TABLE t1(id INT, jd JSON);
+
 INSERT INTO t1 VALUES (1, '[1,3,5]'),(2,'[2,4,6]');
+
 SELECT id, jt.* FROM t1,
   JSON_TABLE(jd, '$[*]' COLUMNS (jid FOR ORDINALITY,
                                  val INT PATH '$')) AS jt;
+
 SELECT /*+ JOIN_ORDER(jt, t1) */ id, jt.*
   FROM t1,
   JSON_TABLE(jd, '$[*]' COLUMNS (jid FOR ORDINALITY,
                                  val INT PATH '$')) AS jt;
+```
+
+示例的查询结果如下：
+
+```shell
++------+------+------+
+| id   | jid  | val  |
++------+------+------+
+|    1 |    1 |    1 |
+|    1 |    2 |    3 |
+|    1 |    3 |    5 |
+|    2 |    1 |    2 |
+|    2 |    2 |    4 |
+|    2 |    3 |    6 |
++------+------+------+
+6 rows in set
 ```
 
 ## 创建视图
@@ -98,13 +133,41 @@ SELECT /*+ JOIN_ORDER(jt, t1) */ id, jt.*
 如下示例为通过 `JSON_TABLE()` 函数的返回值生成视图。
 
 ```shell
-DROP VIEW v1;
 CREATE VIEW v1 AS
   SELECT * FROM JSON_TABLE('[{"a": 1, "b": 2}]',
                            '$[*]' COLUMNS ( a INT PATH '$.b')) AS jt;
+
 SELECT * FROM v1;
+```
+
+示例的查询结果如下：
+
+```shell
++------+
+| a    |
++------+
+|    2 |
++------+
+1 row in set
+```
+
+如下示例为查看视图定义。
+
+```shell
 SHOW CREATE VIEW v1;
+
 DROP VIEW v1;
+```
+
+示例的查询结果如下：
+
+```shell
++------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------+----------------------+
+| View | Create View                                                                                                                       | character_set_client | collation_connection |
++------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------+----------------------+
+| v1   | CREATE VIEW `v1` AS select `jt`.`a` AS `a` from JSON_TABLE('[{\"a\": 1, \"b\": 2}]' , '$[*]' columns (a INTEGER  path '$.b' )) jt | utf8mb4              | utf8mb4_general_ci   |
++------+-----------------------------------------------------------------------------------------------------------------------------------+----------------------+----------------------+
+1 row in set
 ```
 
 ## 向表中插入数据
@@ -113,9 +176,10 @@ DROP VIEW v1;
 
 ```shell
 DROP TABLE IF EXISTS t2;
+
 CREATE TABLE t2(id INT, a TINYINT, b VARCHAR(5), c DATE, d DECIMAL);
-# This statement used to fail with "data too long".
-INSERT INTO t SELECT * FROM
+
+INSERT INTO t2 SELECT * FROM
   JSON_TABLE(JSON_ARRAY(JSON_OBJECT('a', 1, 'b', 'abc'),
                         JSON_OBJECT('a', 2, 'b', 'abcd'),
                         JSON_OBJECT('a', 1000, 'b', 'xyz'),
@@ -126,8 +190,23 @@ INSERT INTO t SELECT * FROM
                              c DATE PATH '$.c' DEFAULT '"2001-01-01"' ON ERROR,
                              d DECIMAL PATH '$.c' DEFAULT '999' ON ERROR)
             ) AS jt;
-SELECT * FROM t ORDER BY id;
+
+SELECT * FROM t2 ORDER BY id;
 DROP TABLE t2;
+```
+
+示例的查询结果如下：
+
+```shell
++------+------+------+------------+-------+
+| id   | a    | b    | c          | d     |
++------+------+------+------------+-------+
+|    1 |    1 | abc  | NULL       |  NULL |
+|    2 |    2 | abcd | NULL       |  NULL |
+|    3 |  111 | xyz  | NULL       |  NULL |
+|    4 | NULL | NULL | 2001-01-01 | 43200 |
++------+------+------+------------+-------+
+4 rows in set
 ```
 
 ## 相关文档
