--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/1300.merge.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/1300.merge.md
@@ -46,14 +46,14 @@ server_list:
 
 ### 存储层合并的示例
 
-* 发起系统租户的每日合并。
+* 系统租户发起系统租户的每日合并。
 
   ```sql
   obclient> ALTER SYSTEM MAJOR FREEZE;
   Query OK, 0 rows affected
   ```
 
-* 发起所有用户租户（不包括系统租户和 Meta 租户）的合并。
+* 系统租户发起所有用户租户（不包括系统租户和 Meta 租户）的合并。
 
   ```sql
   obclient> ALTER SYSTEM MAJOR FREEZE TENANT = all_user;
@@ -67,7 +67,7 @@ server_list:
   Query OK, 0 rows affected
   ```
 
-* 发起指定租户 `tenant1` 和 `tenant2` 的合并。
+* 系统租户发起指定租户 `tenant1` 和 `tenant2` 的合并。
 
   ```sql
   obclient> ALTER SYSTEM MAJOR FREEZE TENANT = tenant1,tenant2;
@@ -76,14 +76,14 @@ server_list:
 
 ### 存储层转储的示例
 
-* 发起系统租户的转储。
+* 系统租户发起系统租户的转储。
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE;
   Query OK, 0 rows affected
   ```
 
-* 发起所有用户租户（不包括系统租户和 Meta 租户）的转储。
+* 系统租户发起所有用户租户（不包括系统租户和 Meta 租户）的转储。
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE TENANT = all_user;
@@ -98,21 +98,21 @@ server_list:
   ```
 
 
-* 发起指定租户 `tenant1` 和 `tenant2` 的转储。
+* 系统租户发起指定租户 `tenant1` 和 `tenant2` 的转储。
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE TENANT = tenant1,tenant2;
   Query OK, 0 rows affected
   ```
 
-* 对指定租户 `tenant1` 下的指定分区进行转储。
+* 系统租户对指定租户 `tenant1` 下的指定分区进行转储。
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE tenant = tenant1 tablet_id = 1100611139453887;
   Query OK, 0 rows affected
   ```
 
-* 对指定的 OBServer 进行转储。
+* 系统租户对指定的 OBServer 进行转储。
 
   ```sql
   obclient> ALTER SYSTEM MINOR FREEZE SERVER = ('10.XXX.XXX.XXX:2882');
@@ -121,14 +121,14 @@ server_list:
 
 ### 暂停或恢复每日合并的示例
   
-* 暂停所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
+* 系统租户暂停所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
 
   ```sql
   obclient> ALTER SYSTEM SUSPEND MERGE TENANT = all_user;
   Query OK, 0 rows affected
   ```
 
-* 暂停指定租户 `tenant1` 和 `tenant2` 的每日合并。
+* 系统租户暂停指定租户 `tenant1` 和 `tenant2` 的每日合并。
 
   ```sql
   obclient> ALTER SYSTEM SUSPEND MERGE TENANT = tenant1,tenant2;
@@ -142,14 +142,14 @@ server_list:
   Query OK, 0 rows affected
   ```
 
-* 恢复所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
+* 系统租户恢复所有用户租户（不包括系统租户和 Meta 租户）的每日合并。
 
   ```sql
   obclient> ALTER SYSTEM RESUME MERGE TENANT = all_user;
   Query OK, 0 rows affected
   ```
 
-* 恢复指定租户 `tenant1` 和 `tenant2` 的每日合并。
+* 系统租户恢复指定租户 `tenant1` 和 `tenant2` 的每日合并。
 
   ```sql
   obclient> ALTER SYSTEM RESUME MERGE TENANT = tenant1,tenant2;
@@ -165,14 +165,14 @@ server_list:
 
 ### 清理合并出错标记的示例
 
-* 清理合并所有用户租户（不包括系统租户和 Meta 租户）的出错标记。
+* 系统租户清理合并所有用户租户（不包括系统租户和 Meta 租户）的出错标记。
 
   ```sql
   obclient> ALTER SYSTEM CLEAR MERGE ERROR TENANT = all_user;
   Query OK, 0 rows affected
   ```
 
-* 清理合并指定租户 `tenant1` 和 `tenant2` 的出错标记。
+* 系统租户清理合并指定租户 `tenant1` 和 `tenant2` 的出错标记。
 
   ```sql
   obclient> ALTER SYSTEM CLEAR MERGE ERROR TENANT = tenant1,tenant2;
