--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/200.archivelog.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/200.alter-system/200.archivelog.md
@@ -21,7 +21,7 @@ ALTER SYSTEM SET LOG_ARCHIVE_DEST='LOCATION=archive_path [PIECE_SWITCH_INTERVAL=
 
 ```sql
 /* 系统租户开启集群中所有租户（系统租户和 Meta 租户没有日志归档功能）的归档模式 */
-ALTER SYSTEM ARCHIVELOG [TENANT = ALL];
+ALTER SYSTEM ARCHIVELOG [TENANT = all];
 
 /* 系统租户开启指定租户的归档模式 */
 ALTER SYSTEM ARCHIVELOG TENANT = tenant_name;
@@ -34,7 +34,7 @@ ALTER SYSTEM ARCHIVELOG;
 
 ```sql
 /* 系统租户关闭集群中所有租户（系统租户和 Meta 租户没有日志归档功能）的归档模式 */
-ALTER SYSTEM NOARCHIVELOG [TENANT = ALL];
+ALTER SYSTEM NOARCHIVELOG [TENANT = all];
 
 /* 系统租户关闭指定租户的归档模式 */
 ALTER SYSTEM NOARCHIVELOG TENANT = tenant_name;
