--- a/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/900.views-of-the-restore.md
+++ b/zh-CN/600.manage/600.backup-and-recovery/600.restore-data/900.views-of-the-restore.md
@@ -65,39 +65,199 @@ OceanBase 数据库支持通过各视图查看恢复的进度与结果。
 
 ## CDB_OB_RECVOER_TABLE_JOBS
 
-`CDB_OB_RECOVER_TABLE_JOB` 用于展示表级恢复任务记录。
+`CDB_OB_RECOVER_TABLE_JOB` 用于展示表级恢复任务的任务记录。--tips：未查到该视图
 
-|  字段                            |  描述                                                                                  |
-|----------------------------------|----------------------------------------------------------------------------------------|
-| TENANT_ID                        | 任务租户的 ID                                                                           |
-| JOB_ID ||
-|||
-|||
-|||
-|||
-|||
+|  字段                  |  描述                                          |
+|-----------------------|------------------------------------------------|
+| TENANT_ID             | 当前执行恢复任务的租户的 ID                      |
+| JOB_ID                | 任务的 JOB_ID                                   |
+| INITIATOR_TENANT_ID   | 用于标识源租户的租户 ID                           |
+| INITIATOR_JOB_ID      | 用于标识父任务的 JOB_ID                          |
+| START_TIMESTAMP       | 任务的开始时间，单位为纳秒                        |
+| FINISH_TIMESTAMP      | 任务的完成时间，单位为纳秒                        |
+| STATUS                | 恢复任务的状态：tips：需要补充有哪些状态           |
+| AUX_TENANT_NAME       | 辅助租户名                                      |
+| TARGET_TENANT_NAME    | 目标租户的租户 ID                               |
+| IMPORT_ALL            | tips？需要补充信息                              |
+| DB_LIST               | 需要完全恢复的数据库                             |
+| TABLE_LIST            | 需要恢复的表                                    |
+| RESTORE_SCN           | 需要恢复的分区                                  |
+| RESTORE_SCN_DISPLAY   |  ？   |
+| RESTORE_OPTION        | 辅助租户依赖的 `restore_option` 参数信息         |
+| BACKUP_DEST           | 备份路径和归档路径                               |
+| BACKUP_SET_LIST       | 数据备份路径                                     |
+| BACKUP_PIECE_LIST     | 日志归档路径                                     |
+| BACKUP_PASSWD         | 备份集密码                                       |
+| EXTERNAL_KMS_INFO     | 如果源租户设置了秘钥托管，则会在 Session 中设置该信息       |
+| REMAP_DB_LIST         | 待重命名的数据库，格式如下：`db1:new_db1,db2:newdb2`，其中，`db1` 和 `db2` 为原数据库名     |
+| REMAP_TABLE_LIST      | 待重命名的表，格式如下：`db1.t1:new_t1, db1.t2:db2.new_t2` 其中，`t1` 和 `t2` 为原表名        |
+| REMAP_TABLEGROUP_LIST | 待重命名的表组，格式如下：`tg1:new_tg1, tg2:new_tg2` 其中，`tg1` 和 `tg2` 为原表组名    |
+| REMAP_TABLESPACE_LIST | 待重命名的表空间，格式如下：`ts1:new_ts1, ts2:new_ts2` 其中，`ts1` 和 `ts2` 为原表组名    |
+| RESULT                | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT               | 任务执行失败后，任务相关的报错信息                |
+| DESCRIPTION           | 任务相关的描述                                  |
   
 
 ## CDB_OB_RECOVER_TABLE_JOB_HISTORY
 
+`CDB_OB_RECOVER_TABLE_JOB_HISTORY` 用于展示表级恢复任务的历史记录。
+
+|  字段                  |  描述                                          |
+|-----------------------|------------------------------------------------|
+| TENANT_ID             | 执行当前任务的租户的 ID                      |
+| JOB_ID                | 当前任务的 JOB_ID                                   |
+| INITIATOR_TENANT_ID   | 用于标识执行父任务的租户 ID                       |
+| INITIATOR_JOB_ID      | 用于标识父任务的 JOB_ID                          |
+| START_TIMESTAMP       | 任务的开始时间，单位为纳秒                        |
+| FINISH_TIMESTAMP      | 任务的完成时间，单位为纳秒                        |
+| STATUS                | 恢复任务的状态：tips：需要补充有哪些状态           |
+| AUX_TENANT_NAME       | 辅助租户名                                      |
+| TARGET_TENANT_NAME    | 目标租户的租户 ID                               |
+| IMPORT_ALL            | tips？需要补充信息                              |
+| DB_LIST               | 需要完全恢复的数据库                             |
+| TABLE_LIST            | 需要恢复的表                                    |
+| RESTORE_SCN           | 需要恢复的分区                                  |
+| RESTORE_SCN_DISPLAY   |  ？   |
+| RESTORE_OPTION        | 辅助租户依赖的 `restore_option` 参数信息         |
+| BACKUP_DEST           | 备份路径和归档路径                               |
+| BACKUP_SET_LIST       | 数据备份路径                                     |
+| BACKUP_PIECE_LIST     | 日志归档路径                                     |
+| BACKUP_PASSWD         | 备份集密码                                       |
+| EXTERNAL_KMS_INFO     | 如果源租户设置了秘钥托管，则会在 Session 中设置该信息       |
+| REMAP_DB_LIST         | 待重命名的数据库，格式如下：`db1:new_db1,db2:newdb2`，其中，`db1` 和 `db2` 为原数据库名     |
+| REMAP_TABLE_LIST      | 待重命名的表，格式如下：`db1.t1:new_t1, db1.t2:db2.new_t2` 其中，`t1` 和 `t2` 为原表名        |
+| REMAP_TABLEGROUP_LIST | 待重命名的表组，格式如下：`tg1:new_tg1, tg2:new_tg2` 其中，`tg1` 和 `tg2` 为原表组名    |
+| REMAP_TABLESPACE_LIST | 待重命名的表空间，格式如下：`ts1:new_ts1, ts2:new_ts2` 其中，`ts1` 和 `ts2` 为原表组名    |
+| RESULT                | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT               | 任务执行失败后，任务相关的报错信息                |
+| DESCRIPTION           | 任务相关的描述                                  |
+
 ## CDB_OB_IMPORT_TABLE_JOBS
 
-|  字段                            |  描述                                                                                  |
-|----------------------------------|----------------------------------------------------------------------------------------|
-| TENANT_ID                        | 任务租户的 ID                                                                           |
-|||
-|||
-|||
+`CDB_OB_IMPORT_TABLE_JOBS` 展示扩租户导入任务的记录。
+
+|  字段                  |  描述                                  |
+|-----------------------|----------------------------------------|
+| TENANT_ID             | 执行当前任务的租户的 ID                 |
+| JOB_ID                | 当前任务的 JOB_ID                          |
+| INITIATOR_TENANT_ID   | 用于标识执行父任务的租户 ID   |
+| INITIATOR_JOB_ID      | 用于标识父任务的 JOB_ID      |
+| START_TIMESTAMP       | 任务的开始时间，单位为纳秒      |
+| FINISH_TIMESTAMP      | 任务的完成时间，单位为纳秒     |
+| SRC_TENANT_NAME       | 源租户的租户名     |
+| SRC_TENANT_ID         | 源租户的租户 ID       |
+| STATUS                | 任务的状态：？      |
+| IMPORT_ALL            |  ？     |
+| DB_LIST               | 需要完全导入的数据库                      |
+| TABLE_LIST            | 需要导入的表                             |
+| REMAP_DB_LIST         | 待重命名的数据库，格式如下：`db1:new_db1,db2:newdb2`，其中，`db1` 和 `db2` 为原数据库名     |
+| REMAP_TABLE_LIST      | 待重命名的表，格式如下：`db1.t1:new_t1, db1.t2:db2.new_t2` 其中，`t1` 和 `t2` 为原表名        |
+| REMAP_TABLEGROUP_LIST | 待重命名的表组，格式如下：`tg1:new_tg1, tg2:new_tg2` 其中，`tg1` 和 `tg2` 为原表组名    |
+| REMAP_TABLESPACE_LIST | 待重命名的表空间，格式如下：`ts1:new_ts1, ts2:new_ts2` 其中，`ts1` 和 `ts2` 为原表组名    |
+| TOTAL_TABLE_COUNT     | 需要导入的表的总数      |
+| FINISHED_TABLE_COUNT  | 已经导入的表的数量     |
+| FAILED_TABLE_COUNT    | 导入失败的表的数量       |
+| RESULT                | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT               | 任务执行失败后，任务相关的报错信息                |
+| DESCRIPTION           | 任务相关的描述                                  |
 
 ## CDB_OB_IMPORT_TABLE_JOB_HISTORY
 
+`CDB_OB_IMPORT_TABLE_JOB_HISTORY` 展示扩租户导入任务的历史记录。
+
+|  字段                  |  描述                                  |
+|-----------------------|----------------------------------------|
+| TENANT_ID             | 执行当前任务的租户的 ID                 |
+| JOB_ID                | 当前任务的 JOB_ID                          |
+| INITIATOR_TENANT_ID   | 用于标识执行父任务的租户 ID   |
+| INITIATOR_JOB_ID      | 用于标识父任务的 JOB_ID      |
+| START_TIMESTAMP       | 任务的开始时间，单位为纳秒      |
+| FINISH_TIMESTAMP      | 任务的完成时间，单位为纳秒     |
+| SRC_TENANT_NAME       | 源租户的租户名     |
+| SRC_TENANT_ID         | 源租户的租户 ID       |
+| STATUS                | 任务的状态：？      |
+| IMPORT_ALL            |  ？     |
+| DB_LIST               | 需要完全导入的数据库                      |
+| TABLE_LIST            | 需要导入的表                             |
+| REMAP_DB_LIST         | 待重命名的数据库，格式如下：`db1:new_db1,db2:newdb2`，其中，`db1` 和 `db2` 为原数据库名     |
+| REMAP_TABLE_LIST      | 待重命名的表，格式如下：`db1.t1:new_t1, db1.t2:db2.new_t2` 其中，`t1` 和 `t2` 为原表名        |
+| REMAP_TABLEGROUP_LIST | 待重命名的表组，格式如下：`tg1:new_tg1, tg2:new_tg2` 其中，`tg1` 和 `tg2` 为原表组名    |
+| REMAP_TABLESPACE_LIST | 待重命名的表空间，格式如下：`ts1:new_ts1, ts2:new_ts2` 其中，`ts1` 和 `ts2` 为原表组名    |
+| TOTAL_TABLE_COUNT     | 需要导入的表的总数      |
+| FINISHED_TABLE_COUNT  | 已经导入的表的数量     |
+| FAILED_TABLE_COUNT    | 导入失败的表的数量       |
+| RESULT                | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT               | 任务执行失败后，任务相关的报错信息                |
+| DESCRIPTION           | 任务相关的描述                                  |
+
 ## CDB_OB_IMPORT_TABLE_TASKS
 
-|  字段                            |  描述                                                                                  |
-|----------------------------------|----------------------------------------------------------------------------------------|
-| TENANT_ID                        | 任务租户的 ID                                                                           |
-|||
-|||
-|||
+`CDB_OB_IMPORT_TABLE_TASKS` 展示表级别的扩租户导入任务的记录。
+
+|  字段                          |  描述                          |
+|-------------------------------|--------------------------------|
+| TENANT_ID                     | 目标租户的租户 ID              |
+| TASK_ID                       | 当前任务的 TASK_ID       |
+| JOB_ID                        | 跨租户导入的 JOB_ID     |
+| SRC_TENANT_ID                 | 源租户的租户 ID     |
+| SRC_TABLESPACE                | 源表所属的表空间名       |
+| SRC_TABLEGROUP                | 源表所属的表组名      |
+| SRC_DATABASE                  | 源表所属的数据库名       |
+| SRC_TABLE                     | 源表名    |
+| SRC_PARTITION                 | 源表的分区名  |
+| TARGET_TABLESPACE             | 重命名后的表空间名，如果未重命名，则显示为空     |
+| TARGET_TABLEGROUP             | 重命名后的表组名，如果未重命名，则显示为空       |
+| TARGET_DATABASE               | 重命名后的数据库名，如果未重命名，则显示为空      |
+| TARGET_TABLE                  | 重命名后的表名，如果未重命名，则显示为空       |
+| TABLE_COLUMN                  | 表的列名      |
+| STATUS                        | 任务状态？      |
+| START_TIMESTAMP               | 任务的开始时间，单位为纳秒     |
+| COMPLETION_TIMESTAMP          | 任务的完成时间，单位为纳秒       |
+| CUMULATIVE_TS                 |  ？     |
+| TOTAL_INDEX_COUNT             |  表中索引的总数量     |
+| IMPORTED_INDEX_COUNT          |  已导入的索引的数量     |
+| FAILED_INDEX_COUNT            |  导入失败的索引数量      |
+| TOTAL_CONSTRAINT_COUNT        |  表中约束的总数量     |
+| IMPORTED_CONSTRAINT_COUNT     |  已导入的约束的数量     |
+| FAILED_CONSTRAINT_COUNT       |  导入失败的约束的数量    |
+| TOTAL_REF_CONSTRAINT_COUNT    |  ？     |
+| IMPORTED_REF_CONSTRAINT_COUNT |   ？     |
+| FAILED_REF_CONSTRAINT_COUNT   |    ？    |
+| RESULT                        | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT                       | 任务执行失败后，任务相关的报错信息                |
 
 ## CDB_OB_IMPORT_TABLE_TASK_HISTORY
+
+`CDB_OB_IMPORT_TABLE_TASK_HISTORY` 展示表级别的扩租户导入任务的历史记录。
+
+|  字段                          |  描述                          |
+|-------------------------------|--------------------------------|
+| TENANT_ID                     | 目标租户的租户 ID              |
+| TASK_ID                       | 当前任务的 TASK_ID       |
+| JOB_ID                        | 跨租户导入的 JOB_ID     |
+| SRC_TENANT_ID                 | 源租户的租户 ID     |
+| SRC_TABLESPACE                | 源表所属的表空间名       |
+| SRC_TABLEGROUP                | 源表所属的表组名      |
+| SRC_DATABASE                  | 源表所属的数据库名       |
+| SRC_TABLE                     | 源表名    |
+| SRC_PARTITION                 | 源表的分区名  |
+| TARGET_TABLESPACE             | 重命名后的表空间名，如果未重命名，则显示为空     |
+| TARGET_TABLEGROUP             | 重命名后的表组名，如果未重命名，则显示为空       |
+| TARGET_DATABASE               | 重命名后的数据库名，如果未重命名，则显示为空      |
+| TARGET_TABLE                  | 重命名后的表名，如果未重命名，则显示为空       |
+| TABLE_COLUMN                  | 表的列名      |
+| STATUS                        | 任务状态？      |
+| START_TIMESTAMP               | 任务的开始时间，单位为纳秒     |
+| COMPLETION_TIMESTAMP          | 任务的完成时间，单位为纳秒       |
+| CUMULATIVE_TS                 |  ？     |
+| TOTAL_INDEX_COUNT             |  表中索引的总数量     |
+| IMPORTED_INDEX_COUNT          |  已导入的索引的数量     |
+| FAILED_INDEX_COUNT            |  导入失败的索引数量      |
+| TOTAL_CONSTRAINT_COUNT        |  表中约束的总数量     |
+| IMPORTED_CONSTRAINT_COUNT     |  已导入的约束的数量     |
+| FAILED_CONSTRAINT_COUNT       |  导入失败的约束的数量    |
+| TOTAL_REF_CONSTRAINT_COUNT    |  ？     |
+| IMPORTED_REF_CONSTRAINT_COUNT |   ？     |
+| FAILED_REF_CONSTRAINT_COUNT   |    ？    |
+| RESULT                        | 任务完成的结果：<ul><li>`SUCCESS`：任务执行成功</li><li>`FAIL`：任务执行失败</li></ul>      |
+| COMMENT                       | 任务执行失败后，任务相关的报错信息                |
