--- a/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/300.access-a-remote-database-by-a-dblink-of-oracle-mode.md
+++ b/zh-CN/700.reference/300.database-object-management/200.manage-object-of-oracle-mode/1000.manage-dblink-of-oracle-mode/300.access-a-remote-database-by-a-dblink-of-oracle-mode.md
@@ -49,7 +49,7 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 访问远端数
 
 示例如下：
 
-1. 在本地数据库中，创建到远端 OceanBase 数据库的 DBLink `my_link` 和一个数据库表 `tbl1`。
+1. 在本地数据库中，创建到远端 OceanBase 数据库 Oracle 租户的 DBLink `my_link` 和一个数据库表 `tbl1`。
 
    * 创建 DBLink `my_link`
 
@@ -208,63 +208,79 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
   
 * 支持调用远端 Oracle 数据库内部的存储过程或包的同义词，同时也支持调用本地数据库中创建的远端对象的同义词。
 
-下面以几个简单的示例进行说明。假设本地 OceanBase 数据库中创建了到远端 Oracle 数据库的 DBLink `orcl_dblink`。
+下面以几个简单的示例进行说明。假设本地 OceanBase 数据库中创建了到远端 OceanBase 数据库的 DBLink `my_link`。
 
-  ```sql
-  CREATE DATABASE LINK orcl_dblink CONNECT TO orcl_user@oracle IDENTIFIED BY ****** OCI HOST 'xx.xx.xx.xx:1521/ORCL';
-  ```
+```sql
+obclient> CREATE DATABASE LINK my_link CONNECT TO ob_user@oracle IDENTIFIED BY ****** HOST 'xx.xx.xx.xx:2881';
+```
 
 * 调用一个简单的独立存储过程
 
-  远端 Oracel 数据库中存在着一张客户信息表:
+  1. 准备数据环境。
 
-  ```sql
-  obclient> CREATE TABLE customer_info
-        (id NUMBER,
-        name VARCHAR2(20));
-  ```
+     远端 OceanBase 数据库 Oracle 租户中存在着一张客户信息表 `customer_info`:
 
-  并且表中的数据如下：
+     ```sql
+     obclient> CREATE TABLE customer_info
+            (id NUMBER,
+            name VARCHAR2(20));
+     ```
 
-  ```shell
-  +------+------+
-  | ID   | NAME |
-  +------+------+
-  |    1 | ZHAO |
-  |    2 | LI   |
-  +------+------+
-  2 rows in set
-  ```
+     并向表中插入如下所示数据：
 
-  同时在远端数据库中还创建了一个存储过程，该存储过程用于接受一个 `customer_id` 参数，并返回该客户的 ID。
+     ```sql
+     obclient> INSERT INTO customer_info VALUES(1,'ZHAO'),(2,'LI');
+     ```
 
-  ```sql
-  obclient> CREATE OR REPLACE PROCEDURE get_customer_id (
-    customer_id IN NUMBER
-  )
-  IS
-  BEGIN
-      DBMS_OUTPUT.PUT_LINE('Customer ID is: ' || customer_id);
-  END;
-  /
-  ```
+     执行 `SELECT * FROM customer_info` 语句查询表中的数据，结果如下：
 
-  接着，在本地数据库中，执行 `SET SERVEROUTPUT ON;` 设置服务器输出后，再通过以下语句调用存储过程。
+     ```shell
+     +------+------+
+     | ID   | NAME |
+     +------+------+
+     |    1 | ZHAO |
+     |    2 | LI   |
+     +------+------+
+     2 rows in set
+     ```
 
-  ```sql
-  CALL get_customer_id@orcl_dblink(1)；
-  ```
+     同时远端数据库中还创建了一个存储过程，该存储过程用于接收一个 `customer_id` 参数，并返回该客户的 ID。
 
-  输出结果如下：
+     ```sql
+     obclient> CREATE OR REPLACE PROCEDURE get_customer_id (
+       customer_id IN NUMBER
+     )
+     IS
+     BEGIN
+         DBMS_OUTPUT.PUT_LINE('Customer ID is: ' || customer_id);
+     END;
+     /
+     ```
+ 
+  2. 在本地数据库中调用存储过程。
 
-  ```shell
-  Customer ID is: 1
-  ```
+     设置服务器输出：
+
+     ```sql
+     bclient> SET SERVEROUTPUT ON;
+     ```
+  
+     再执行调用语句：
+
+     ```sql
+     obclient> CALL get_customer_id@my_link(1);
+     ```
+
+     输出结果如下：
+
+     ```shell
+     Customer ID is: 1
+     ```
 
   但是，当前暂不支持通过以下方式调用该存储过程：
 
   ```sql
-  SELECT get_customer_id@orcl_dblink(1) FROM DUAL;
+  SELECT get_customer_id@my_link(1) FROM DUAL;
   ```
 
   除此之外，如果您为远端 Oracle 数据库上的存储过程 `get_customer_id` 创建了以下同义词：
@@ -278,7 +294,7 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
   * 在本地 OceanBase 数据库上通过 DBLink 创建存储过程 `get_customer_id` 的同义词 `syn_local_customer_id`
 
     ```sql
-    CREATE OR REPLACE SYNONYM syn_local_customer_id FOR get_customer_id@orcl_dblink;
+    CREATE OR REPLACE SYNONYM syn_local_customer_id FOR get_customer_id@my_link;
     ```
 
   您都可以通过 DBLink 直接调用这些同义词，调用语句如下：
@@ -286,7 +302,7 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
   * 调用远端 Oracle 数据库上的同义词
 
     ```sql
-    CALL syn_remote_customer_id@orcl_dblink(1)；
+    CALL syn_remote_customer_id@my_link(1)；
     ```
 
   * 调用本地 OceanBase 数据库上的同义词
@@ -297,7 +313,7 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
 
 * 调用一个包含出入参的存储过程
 
-  如下所示，假设远端 Oracel 数据库中存在着一张员工表:
+  如下所示，假设远端数据库中存在着一张员工表:
 
   ```sql
   obclient> CREATE TABLE employees
@@ -346,7 +362,7 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
 
 * 调用一个包类型为复合数据类型的出入参的包存储过程
 
-  如下所示，在远端 Oracle 数据库中，存在一个程序包 `pkg1`，该包包含了多种复合数据类型，包括记录和嵌套表，同时还包含一个名为 `pro1` 的存储过程。
+  如下所示，在远端数据库中，存在一个程序包 `pkg1`，该包包含了多种复合数据类型，包括记录和嵌套表，同时还包含一个名为 `pro1` 的存储过程。
 
   ```sql
   CREATE OR REPLACE PACKAGE pkg1 AS
@@ -381,13 +397,13 @@ OceanBase 数据库从 V4.2.1 版本开始，支持通过 DBLink 调用远端数
 
   ```sql
   DECLARE
-    param1 pkg1.ty1@orcl_dblink;
-    param2 pkg1.ty2@orcl_dblink;
-    param3 pkg1.ty3@orcl_dblink;
-    param4 pkg1.ty4@orcl_dblink;
-    param5 pkg1.ty5@orcl_dblink;
+    param1 pkg1.ty1@my_link;
+    param2 pkg1.ty2@my_link;
+    param3 pkg1.ty3@my_link;
+    param4 pkg1.ty4@my_link;
+    param5 pkg1.ty5@my_link;
   BEGIN
-    pkg1.pro1@orcl_dblink(param1, param2, param3, param4, param5);
+    pkg1.pro1@my_link(param1, param2, param3, param4, param5);
   END;
   /
   ```
